# embedded-coding-challenge

./: CMakeLists.txt  README.md
FreeRTOS/Demo/Posix_GCC/: main_full.c
challenge/: FreeRTOSConfig.h  Makefile  console.c  console.h  emulator.c  main.c
src/: challenge.c  challenge.h
